Fix centering issue on smaller screens and reduce navbar image size

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,4 +116,12 @@ h1 {
   .navbar-brand {
     margin: auto;
   }
+
+  .navbar {
+    justify-content: center;
+  }
+
+  .nav-img {
+    width: 90px;
+  }
 }
